{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "dd23690e-758d-482a-9cf0-e530a54d3824",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Value",
                    "id": "54d2cee6-4e46-4aad-8659-bc27117f15d1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBack",
                    "type": "Value",
                    "id": "1eec26f3-88be-4085-9a31-342d3df017d1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveLeft",
                    "type": "Value",
                    "id": "e2017f83-e917-4e4b-b39b-98d4890c03a1",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveRight",
                    "type": "Value",
                    "id": "467f43e9-9ffb-4090-b81e-4c3e2c6d382b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "806de93c-29e0-4133-8840-a5640afd28c0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "78a78a21-6ad9-45a9-a505-ea7ff82579aa",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d902a3a-7883-411b-9bb4-ba070bd36cd8",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoveBack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4692cc7-5d74-430f-8490-c2e2efe66ffc",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoveLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0595106a-0d07-43e2-966e-d3e5f065d881",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "MoveRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7be04d1b-d38b-4ee9-8788-981eb0f77f2b",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": []
        }
    ]
}